<resources>
    <string name="app_name">Ananta Partners</string>
    <string name="hello_user">Hello User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="prescription_record">Prescription Record</string>
    <string name="onboarding_text1">Here you can keep a record of all your patient prescriptions with date and patient details for any future references.</string>
    <string name="onboarding_text2">Here is a quick access for you, to help you place your regular orders conveniently.</string>
    <string name="onboarding_text3">This is a one tap solution for you to attend all Ananta Sambhasha Sessions.</string>
    <string name="onboarding_text4">Now, you can access the benefitting sessions available to you in this tutorial hub.</string>
    <string name="onboarding_text5">Our Monthly Newsletter where we share the Industry news, product launches, offers and rewards. A fun space to look out for, every month!</string>
    <string name="medical_cannabis_tutorials">Medical Cannabis Tutorials</string>
    <string name="live_cme_sessions">Live CME Sessions</string>
    <string name="email_or_mobile_number">Email or mobile number</string>
    <string name="mobile_number">Enter mobile number</string>
    <string name="address_mobile_number">Mobile number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Confirm your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="skip_login">Skip Login</string>
    <string name="new_user_sign_up">New user? <b>Sign up</b></string>
    <string name="enter_mobile_number">Enter your mobile number to create your account.</string>
    <string name="update_mobile_number">Enter your mobile number to update.</string>
    <string name="update_email">Enter your Email to update.</string>
    <string name="update_password_message">Enter your mobile number to verify your account.</string>
    <string name="enter_otp">OTP is sent to your mobile number.</string>
    <string name="continue_text">Continue</string>
    <string name="submit_text">Submit</string>
    <string name="done_text">Done</string>
    <string name="resend_otp_timer">Resend OTP in %1$d</string>
    <string name="resend_otp"><b>Resend OTP</b></string>
    <string name="update_password">Change your Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_sign_in">Create Account / Login</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_clinic_name">Enter your clinic name</string>
    <string name="address">ADDRESS</string>
    <string name="address_title">Address</string>
    <string name="address_line_1">Flat, House no., Building</string>
    <string name="address_line_2">Area, Street, Sector</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="doctor_registration_certificate">DOCTOR REGISTRATION CERTIFICATE</string>
    <string name="leaf_of_life_n_monthly_newsletter">Leaf of Life \n(Monthly Newsletter)</string>
    <string name="upload_certificate">Click here to upload certificate</string>
    <string name="upload_prescription_text">Click here to upload prescription</string>
    <string name="permissions_required">Necessary permissions required</string>
    <string name="select_doctor_certificate">Select doctor registration certificate</string>
    <string name="doctor_certificate">Doctor registration certificate</string>
    <string name="uploaded_file_exceeded_size_limit">The uploaded file is above the 10 MB size limit.</string>
    <string name="please_select_valid_file">Please select a valid file.</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="home">Home</string>
    <string name="dosage_calculator">Dosage Calculator</string>
    <string name="profile">Profile</string>
    <string name="live_sessions">Live Sessions</string>
    <string name="clinical_study">Clinical Study</string>
    <string name="tutorials">Tutorials</string>
    <string name="orders">Orders</string>
    <string name="newsletter">Newsletter</string>
    <string name="support">Support</string>
    <string name="log_out">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="categories">CATEGORIES</string>
    <string name="best_seller">BESTSELLER</string>
    <string name="product_price_from">from Rs. %1$d/-</string>
    <string name="product_category_in">in %1$s</string>
    <string name="trending_products">BEST RATED PRODUCTS</string>
    <string name="all_products">ALL PRODUCTS</string>
    <string name="all_products_small">All Products</string>
    <string name="search_products">Search Products...</string>
    <string name="no_products_found">NO PRODUCTS FOUND</string>
    <string name="cart">Cart</string>
    <string name="price_normal">MRP: Rs. %1$s</string>
    <string name="price_user">MRP: Rs. %1$s  %2$s <font color='#8B0000'>Rs. %3$s</font></string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="download_pdf">DOWNLOAD PDF</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="tax_included">Tax Included</string>
    <string name="download_test_reports">DOWNLOAD TEST REPORTS</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="prescription">Prescription</string>
    <string name="full_name">Full Name</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No.</string>
    <string name="due_amount">Due Amount</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="your_id_verification_is_in_progress">Note: Your ID verification is in progress</string>
    <string name="edit">Edit</string>
    <string name="edit_address">Edit Address</string>
    <string name="pay_remaining_amount">Pay remaining amount</string>
    <string name="update">Update</string>
    <string name="no_prescriptions_found">No Prescriptions Found :-(</string>
    <string name="no_orders_found">kindly add items in Cart :-(</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="max_30_words">Max 30 words...</string>
    <string name="write_here">Write here...</string>
    <string name="add_description">Add Description (Max 100 words... )</string>
    <string name="select_dates">Select Dates</string>
    <string name="note_only_image_and_pdf_can_be_uploaded">Note: Only Image and PDF can be uploaded.</string>
    <string name="your_orders">Your Orders</string>
    <string name="leaf_of_life_monthly_newsletter">Leaf of Life (Monthly Newsletter)</string>
    <string name="select_any_value">Select any type</string>
    <string name="select_product">Select Product</string>
    <string name="select_product_type">Select Product Type</string>
    <string name="select_indication">Select Indication</string>
    <string name="select_your_weight">Select Your Weight</string>
    <string name="delete_your_account">To delete your account, <font color="#8B0000">Click Here</font></string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="confirm_logout_account">Are you sure you want to log out?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="no_data_found">No data found :-(</string>
    <string name="search_here">Search here...</string>
    <string name="instagram_feed">INSTAGRAM FEED</string>
    <string name="live_session_header">LIVE SESSION</string>
    <string name="result">Result</string>
    <string name="indication">INDICATION</string>
    <string name="disclaimer">DISCLAIMER</string>
    <string name="ok">OK</string>
    <string name="coupon">Coupon</string>
    <string name="price_to_pay">Price to pay</string>
    <string name="no_coupon_applied">NO COUPON APPLIED</string>
    <string name="use_the_below_codes_to_avail_discount">Use the below codes to avail discount</string>
    <string name="enter_coupon_to_avail_discount">Enter coupon code to avail discount</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="expiry_coupon">Expiry on %1$s</string>
    <string name="invalid_coupon">Invalid Coupon</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="coupon_applied">Coupon Applied!</string>
    <string name="check_offers">Check offers</string>
    <string name="select_any_address_to_proceed_checkout">Select any address to place order</string>
    <string name="proceed_checkout">Proceed Checkout</string>
    <string name="add_address">ADD NEW ADDRESS</string>
    <string name="update_address">UPDATE ADDRESS</string>
    <string name="add_address_done">ADDRESS CREATED!</string>
    <string name="update_address_done">ADDRESS UPDATED!</string>
    <string name="no_address_found">Kindly add address to place order</string>
    <string name="new_address_text">Add your address to place order</string>
    <string name="update_address_text">Update your existing address to place order</string>
    <string name="trans_pending">Please Wait!</string>
    <string name="trans_completed">Transaction Successful!</string>
    <string name="trans_failed">Transaction Failed!</string>
    <string name="trans_pending_desc">We are continuously checking the status of your payment. We request you not to make multiple payments and wait for few minutes till the status is updated.</string>
    <string name="trans_completed_desc">Your transaction of Rs. %1$s has been successfully completed. Kindly note the transaction ID: %2$s for your reference.</string>
    <string name="trans_failed_desc">Your transaction of Rs. %1$s has been failed or denied. In case of amount deducted, it will be credited within 14 working days. Kindly note the transaction ID: %2$s for your reference.</string>
    <string name="contact_support">CONTACT SUPPORT</string>
    <string name="product_added">PRODUCT ADDED IN CART</string>
    <string name="empty_string"></string>
    <string name="transaction_amount">Rs. %1$s</string>
    <string name="transaction_subtitle">For payment of %1$s #%2$s</string>
    <string name="success">SUCCESS</string>
    <string name="txStatus">txStatus</string>
    <string name="orderId">orderId</string>
    <string name="mode_of_payment">MODE OF PAYMENT?</string>
    <string name="payment_dialog_text">While doing payment via CREDIT, you can pay us from 30 to 45 days with no extra cost.</string>
    <string name="credit_dialog_text">CREDIT</string>
    <string name="pay_now">PAY NOW</string>
    <string name="order_id">Order #%1$s</string>
    <string name="products">Products</string>
    <string name="my_account">My Account</string>
    <string name="privacy_policies">Privacy Policy</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
</resources>