<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/home"-->
<!--            android:icon="@drawable/ic_menu_home"-->
<!--            android:title="@string/home" />-->
        <item
            android:id="@+id/dosage_calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/dosage_calculator" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/upload_prescription"
            android:icon="@drawable/ic_menu_prescription"
            android:title="@string/upload_prescription"/>
        <item
            android:id="@+id/orders"
            android:icon="@drawable/ic_menu_orders"
            android:title="@string/orders" />
        <item
            android:id="@+id/live_sessions"
            android:icon="@drawable/ic_menu_live_sessions"
            android:title="@string/live_sessions" />
        <item
            android:id="@+id/tutorials"
            android:icon="@drawable/ic_menu_tutorials"
            android:title="@string/tutorials" />
        <item
            android:id="@+id/newsletter"
            android:icon="@drawable/ic_menu_newsletter"
            android:title="@string/newsletter" />
        <item
            android:id="@+id/support"
            android:icon="@drawable/ic_menu_support"
            android:title="@string/support" />

      <item
          android:id="@+id/privacy"
          android:icon="@drawable/ic_menu_privacy"
          android:title="@string/privacy_policies" />

      <item
          android:id="@+id/tac"
          android:icon="@drawable/ic_menu_condition"
          android:title="@string/terms_and_conditions" />

        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_menu_log_out"
            android:title="@string/log_out" />
    </group>
</menu>