<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home" />

<!--    <item-->
<!--        android:id="@+id/offers"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_menu_offers"-->
<!--        android:title="@string/offers" />-->

    <item
        android:id="@+id/products"
        android:enabled="true"
        android:icon="@drawable/ic_menu_products"
        android:title="@string/products" />

    <item
        android:id="@+id/support"
        android:enabled="true"
        android:icon="@drawable/ic_menu_support"
        android:title="@string/support" />

    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/my_account" />




</menu>