<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_CDCDCD">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/ic_back"
                android:elevation="1dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/textview_normal_big"
                android:textColor="@color/white"
                android:text="@string/address_title"/>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/title"
            style="@style/textview_bold_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:gravity="left"
            android:text="@string/select_any_address_to_proceed_checkout"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/address_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_layout"
            android:layout_margin="@dimen/_5sdp"
            android:background="@color/grey_CDCDCD"
            tools:listitem="@layout/item_address" />

        <TextView
            android:id="@+id/no_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_address_found"
            style="@style/textview_normal_medium"
            android:textColor="@color/orange_F8AA37"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_layout" />


        <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textview_normal_medium"
            android:text="@string/add_address"
            android:background="@drawable/textview_orange_corner_radius"
            android:gravity="center"
            android:letterSpacing="0.09"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/buy_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textview_normal_medium"
            android:text="@string/place_order"
            android:textColor="@color/white"
            android:background="@drawable/background_orange_corner_radius"
            android:gravity="center"
            android:letterSpacing="0.09"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>